<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.kwasen.bustime.MainActivity">
    xmlns:app="http://schemas.android.com/apk/res-auto"


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:inputType="textPersonName"
        android:textStyle="italic"
        android:layout_marginTop="48dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:autoText="false"
        android:layout_alignParentTop="true"
        android:clickable="false"
        android:hint="@string/enter_username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_marginTop="25dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:layout_alignWithParentIfMissing="false"
        android:layout_below="@+id/editText1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/enter_password" />

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logInButton"
        android:textColor="@android:color/black"
        android:layout_marginTop="26dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"

        custom:pb_colorError="@color/red_error"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorNormal="@color/blue_normal"
        custom:pb_colorPressed="@color/blue_pressed"
        custom:pb_colorProgress="@color/purple_progress"
        custom:pb_textComplete="Success"
        custom:pb_textProgress="Loading"
        custom:pb_textError="Error"
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUpButton"
        android:textColor="@android:color/black"
        android:layout_below="@+id/button1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"

        custom:pb_colorError="@color/red_error"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorNormal="@color/blue_normal"
        custom:pb_colorPressed="@color/blue_pressed"
        custom:pb_colorProgress="@color/purple_progress"
        custom:pb_textComplete="Success"
        custom:pb_textProgress="Loading"
        custom:pb_textError="Error"/>

</RelativeLayout>